# algohol

./: .gitignore  CMakeLists.txt
divide_and_conqurer/: binary_search.cpp  count_sort.cpp  merge_sort.cpp
dynamic_programming/: knapsack.cpp  levenstein_distance.cpp  longest_divisible_subsequence.cpp
greedy/: continuous_knapsack.cpp  different_terms.cpp  huffman_decoding.cpp  huffman_encoding.cpp  point_coverage.cpp  priority_queue.cpp
hash_based_algorithms/: list_hash_map.cpp  open_addressed_table.cpp  rabin_karp.cpp
leetcode/: pom.xml
leetcode/src/main/java/edu/agus/codeforces/edu/: LongestPalindromicPrefix1.java  SearchWithJokers.java
leetcode/src/main/java/edu/agus/leetcode/: LongestCommonPrefix.java  NumberPalindrome.java  RomanToInteger.java  SumOfTwo.java  ValidParenthesis.java
leetcode/src/main/java/edu/agus/leetcode/contest/: Robot.java
leetcode/src/main/java/edu/agus/leetcode/design/: BSTIterator.java  FindOriginalArrayFromDoubledArray.java  FrontMiddleBackQueue.java  InsertDeleteGetRandomO1.java  MapSum.java  MinStack.java  MyCircularQueue.java  MyLinkedList.java  NestedIterator.java  NumMatrix.java  PhoneDirectory.java  (+9 more)
priority_queues_disjoined_sets/: auto_program_analysis.cpp  heap_build.cpp  parallel_execution.cpp  tables_join.cpp
simple_ds/: brackets_balancing.cpp  max_in_sliding_window.cpp  max_stack.cpp  network_packages.cpp  tree_height.cpp
trees/: binary_tree_general_property.cpp  binary_tree_property.cpp  general_property_tests.txt  set_with_distance_queries.cpp  tree_traversals.cpp
trival/: fib.cpp  fib_last_digit.cpp  gcd.cpp
(+445 files in other folders)
