cmake_minimum_required(VERSION 3.20)
project(algohol)

set(CMAKE_CXX_STANDARD 14)

add_executable(binary_search divide_and_conqurer/binary_search.cpp)
add_executable(count_sort divide_and_conqurer/count_sort.cpp)
add_executable(merge_sort divide_and_conqurer/merge_sort.cpp)
add_executable(knapsack dynamic_programming/knapsack.cpp)
add_executable(levenstain_distance dynamic_programming/levenstein_distance.cpp)
add_executable(lds dynamic_programming/longest_divisible_subsequence.cpp)
add_executable(continuous_knapsack greedy/continuous_knapsack.cpp)
add_executable(different_terms greedy/different_terms.cpp)
add_executable(huffman_decoding greedy/huffman_decoding.cpp)
add_executable(huffman_encoding greedy/huffman_encoding.cpp)
add_executable(point_coverage greedy/point_coverage.cpp)
add_executable(priority_queue greedy/priority_queue.cpp)
add_executable(fib trival/fib.cpp)
add_executable(fib_last_digit trival/fib_last_digit.cpp)
add_executable(gcd trival/gcd.cpp)
add_executable(brackets_balancing simple_ds/brackets_balancing.cpp)
add_executable(tree_height simple_ds/tree_height.cpp)
add_executable(max_stack simple_ds/max_stack.cpp)
add_executable(max_in_sliding_window simple_ds/max_in_sliding_window.cpp)
add_executable(network_packages simple_ds/network_packages.cpp)
add_executable(heap_build priority_queues_non_intersecting_sets/heap_build.cpp)
